--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>Hema C. P. Movva</title>
   <meta name="description" content="Personal homepage">
-  <meta name="author" content="Hema C. P. Movva">
+  <meta name="author" content="Stefano Larentis">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -35,11 +35,11 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Hema C. P. Movva</h4>
-        <p>I am an electrical engineering graduate student at <a href="http://www.mrc.utexas.edu">The Microelectronics Research Center</a>, <a href="http://www.utexas.edu">The University of Texas at Austin</a>. I am advised by <a href="http://nano.ece.utexas.edu"> Emanuel Tutuc</a> and <a href="http://banerjeelab.mer.utexas.edu"> Sanjay Banerjee</a>. </p>
+        <p>I am an electrical engineering graduate student at <a href="http://www.mrc.utexas.edu">The Microelectronics Research Center</a>, <a href="http://www.utexas.edu">The University of Texas at Austin</a>. I am advised by <a href="http://nano.ece.utexas.edu"> Emanuel Tutuc</a>. </p>
         
         <p>My current research is focused on fabrication and characterization of electronic devices using layered semiconductors, specifically, transition metal dichalcogenides and their heterostructures. </p> 
         
-        <p>My <a href="https://scholar.google.com/citations?user=c_IscTQAAAAJ">Google Scholar</a>, <a href="http://orcid.org/0000-0003-3001-3171">ORCID</a>, <a href="https://www.linkedin.com/in/hemacp">LinkedIn</a>, and <a href="hemacp_CV.pdf">resume</a>.</p>
+        <p>My <a href="https://scholar.google.it/citations?user=mhuBvd0AAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/stefano-larentis-b7048b6">LinkedIn</a>, and <a href="stefano.pdf">resume</a>.</p>
       </div>
     </div>
   </div>
