--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Hema C. P. Movva</title>
+  <title>Stefano Larentis</title>
   <meta name="description" content="Personal homepage">
   <meta name="author" content="Stefano Larentis">
 
