--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>Hema C. P. Movva</h4>
+        <h4>Stefano Larentis</h4>
         <p>I am an electrical engineering graduate student at <a href="http://www.mrc.utexas.edu">The Microelectronics Research Center</a>, <a href="http://www.utexas.edu">The University of Texas at Austin</a>. I am advised by <a href="http://nano.ece.utexas.edu"> Emanuel Tutuc</a>. </p>
         
         <p>My current research is focused on fabrication and characterization of electronic devices using layered semiconductors, specifically, transition metal dichalcogenides and their heterostructures. </p> 
