--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <p>My current research is focused on fabrication and characterization of electronic devices using layered semiconductors, specifically, transition metal dichalcogenides and their heterostructures. </p> 
         
-        <p>My <a href="https://scholar.google.it/citations?user=mhuBvd0AAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/stefano-larentis-b7048b6">LinkedIn</a>, and <a href="http://stefanolarentis.github.io/stefano.pdf">resume</a>.</p>
+        <p>My <a href="https://scholar.google.it/citations?user=mhuBvd0AAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/stefano-larentis-b7048b6">LinkedIn</a>, and <a href="http://stefanolarentis.github.io/stefano.pdf">resume</a> test.</p>
       </div>
     </div>
   </div>
