--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Stefano Larentis</h4>
-        <p>I am an electrical engineering graduate student at <a href="http://www.mrc.utexas.edu">The Microelectronics Research Center</a>, <a href="http://www.utexas.edu">The University of Texas at Austin</a>. I am advised by <a href="http://nano.ece.utexas.edu"> Emanuel Tutuc</a>. </p>
+        <p>I an electrical engineer, and I obtained my PhD at The University of Texas at Austin in 2018 </p>
         
-        <p>My current research is focused on fabrication and characterization of electronic devices using layered semiconductors, specifically, transition metal dichalcogenides and their heterostructures. </p> 
+        <p>I work at NXP as a Failure Analysis Engineer! </p> 
         
-        <p>My <a href="https://scholar.google.it/citations?user=mhuBvd0AAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/stefano-larentis-b7048b6">LinkedIn</a>, and <a href="http://stefanolarentis.github.io/stefano.pdf">resume</a>.</p>
+        <p>My <a href="https://scholar.google.it/citations?user=mhuBvd0AAAAJ&hl=en">Google Scholar</a>, <a href="https://www.linkedin.com/in/stefano-larentis-b7048b6">LinkedIn</a>, and <a href="http://stefanolarentis.github.io/aaa.pdf">resume</a>.</p>
       </div>
     </div>
   </div>
